--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,11 @@ body {
 /*PHONE VİEW*/
 @media (min-width: 320px) and (max-width: 768px) {
   /*HEADER PLACES*/
-
+  body {
+    margin-left: 16px;
+    margin-top: 16px;
+    margin-right: 16px;
+  }
   .header-div {
     height: 72px;
 
@@ -41,13 +45,53 @@ body {
     height: 40px;
   }
 
-  .threelines-svg {
-    width: 40px;
-    height: 40px;
-    color: black;
-    border: 2px solid black;
+  .resume-threelines-div {
+    width: 36px;
+    height: 36px;
     margin-right: 18px;
-    margin-top: 18px;
-    margin-bottom: 16px;
+  }
+
+  /*MAİN PLACES */
+
+  /*WOMAN PLACES*/
+  .woman-p {
+    color: #71717a;
+    font-weight: 700;
+  }
+
+  .div-svg-class {
+    width: 264px;
+    height: 56px;
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+    margin-top: 32px;
+  }
+
+  .div-svg-class svg {
+    width: 48px;
+    height: 48px;
+    border: 2px solid black;
+    border-radius: 5px;
+  }
+
+  /*MY SKİLLS PLACES*/
+
+  .skills-place {
+    width: 343px;
+    height: 72px;
+    margin-top: 40px;
+  }
+
+  .my-skill {
+    text-align: center;
+    font-family: "Sora", sans-serif;
+  }
+
+  .my-skill p {
+    font-weight: 800;
+    font-size: 28px;
+    line-height: 32px;
+    color: #000000;
   }
 }
