--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,6 @@ body {
   }
   .header-div {
     height: 72px;
-
     justify-content: space-between;
   }
 
@@ -59,6 +58,10 @@ body {
     font-weight: 700;
   }
 
+  .description-place {
+    margin-bottom: 70px;
+  }
+
   .div-svg-class {
     width: 264px;
     height: 56px;
@@ -66,6 +69,7 @@ body {
     flex-direction: row;
     gap: 24px;
     margin-top: 32px;
+    margin-bottom: 70px;
   }
 
   .div-svg-class svg {
@@ -80,7 +84,10 @@ body {
   .skills-place {
     width: 343px;
     height: 72px;
-    margin-top: 40px;
+    margin-top: 100px;
+    margin-left: 40px;
+    margin-right: 40px;
+    display: block;
   }
 
   .my-skill {
@@ -122,5 +129,13 @@ body {
     width: 160px;
     height: 160px;
     border: 2px solid black;
+  }
+
+  /*EXPERİENCE PLACE*/
+  .experience-place {
+    width: 343px;
+    height: 72px;
+    margin-top: 20px;
+    gap: 16px;
   }
 }
