--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,10 @@ body {
     margin-left: 16px;
     margin-top: 16px;
     margin-right: 16px;
+    font-family: "Sora", sans-serif;
   }
   .header-div {
+    width: 343px;
     height: 72px;
     justify-content: space-between;
   }
@@ -60,6 +62,7 @@ body {
 
   .description-place {
     margin-bottom: 70px;
+    width: 343px;
   }
 
   .div-svg-class {
@@ -82,20 +85,23 @@ body {
   /*MY SKİLLS PLACES*/
 
   .skills-place {
-    width: 343px;
-    height: 72px;
+    width: 375px;
     margin-top: 100px;
-    margin-left: 40px;
+    margin-left: 16px;
     margin-right: 40px;
     display: block;
   }
 
   .my-skill {
     text-align: center;
-    font-family: "Sora", sans-serif;
+  }
+  .my-skill h2 {
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 32px;
   }
 
-  .my-skill p {
+  .my-skill span {
     font-weight: 800;
     font-size: 28px;
     line-height: 32px;
@@ -123,19 +129,71 @@ body {
     display: flex;
     flex-direction: row;
     gap: 20px;
+    margin-bottom: 40px;
   }
 
   .skill-icons-2 div svg {
     width: 160px;
     height: 160px;
+
     border: 2px solid black;
   }
 
   /*EXPERİENCE PLACE*/
   .experience-place {
-    width: 343px;
+    width: 375px;
+    margin-top: 40px;
+    padding: 20px;
+    gap: 20px;
+    margin: 16px;
+    background-color: #000000;
+    color: #ffffff;
+    margin-bottom: 20px;
+  }
+
+  .experience {
     height: 72px;
-    margin-top: 20px;
-    gap: 16px;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .experience h2 {
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 32px;
+  }
+
+  .experience span {
+    font-weight: 800;
+    font-size: 28px;
+    line-height: 32px;
+  }
+
+  .google {
+    border: 1px solid #71717a;
+    border-radius: 10px;
+    margin-top: 30px;
+  }
+
+  .google-svg {
+    margin-top: 30px;
+    margin-left: 24px;
+    display: flex;
+    flex-direction: row;
+    column-gap: 30px;
+    align-items: center;
+  }
+
+  .google-svg h2 {
+    width: 233px;
+    height: 48px;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 24px;
+  }
+
+  .nov {
   }
 }
