--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
   width: 100%;
+  padding: 0px;
 }
 
 /*PHONE VİEW*/
@@ -9,6 +10,7 @@ body {
     margin-left: 16px;
     margin-top: 16px;
     margin-right: 16px;
+    padding: 0px;
     font-family: "Sora", sans-serif;
   }
   .header-div {
@@ -87,8 +89,8 @@ body {
   .skills-place {
     width: 375px;
     margin-top: 100px;
-    margin-left: 16px;
-    margin-right: 40px;
+
+    padding: 0px;
     display: block;
   }
 
@@ -145,7 +147,7 @@ body {
     margin-top: 40px;
     padding: 20px;
     gap: 20px;
-    margin: 16px;
+
     background-color: #000000;
     color: #ffffff;
     margin-bottom: 20px;
